@@ -2,6 +2,7 @@ forestmodel 0.6.0 (2019-02-25)
 ------------------------------
 * Updated package to use `rlang::tidy_eval`
 * Added `model_list` option as suggested by Natasha Purington
+* Filter out by default confidence intervals or points that go are infinite
 
 forestmodel 0.5.1 (2018-11-15)
 ------------------------------
